# pycaret-frontend-k8s-streamlit

./: README.md  docker-compose.yaml  index.rst  pyproject.toml
src/backend/app/: app.py  requirements.txt
src/backend/model/: best_gbr_for_deployment.pkl
src/backend/tests/: test_regression.py
src/frontend/k8s_streamlit/: Dockerfile  app.py  requirements.txt
src/frontend/k8s_streamlit/development/configmap/: k8s-Streamlit.yaml  readme.md
src/frontend/k8s_streamlit/development/deployment/: deployment.yaml  service.yaml
src/frontend/notebooks/: Dockerfile  EXP_Insurance - Regression.ipynb  config.json  jupyter.yaml  mlflow - PyCaret Integration.ipynb
src/frontend/notebooks/data/: first_generated_pipeline.pkl  runs.csv  runs.csvZone.Identifier
src/frontend/notebooks/mlruns/0/: meta.yaml
src/frontend/notebooks/mlruns/561545073169167196/: meta.yaml
src/frontend/notebooks/mlruns/561545073169167196/03f0a24b27644f5d934d0e02870b8324/: meta.yaml
src/frontend/notebooks/mlruns/561545073169167196/0516a0c32ac643429399d16bacd2dc37/: meta.yaml
src/frontend/notebooks/mlruns/561545073169167196/1054ba6f2fd74b63a3c4c6e0cf445b63/: meta.yaml
src/frontend/notebooks/mlruns/561545073169167196/10e0330eba7b4d4fbe5578622302038e/: meta.yaml
src/frontend/notebooks/mlruns/561545073169167196/1270b624e0b34104b049cfbf82f3b693/: meta.yaml
src/frontend/notebooks/mlruns/561545073169167196/132ac21022d04d32b73d97fce1930bcf/: meta.yaml
src/frontend/notebooks/mlruns/561545073169167196/1333c73a878e462aaa784af22c62e64f/: meta.yaml
(+1507 files in other folders)
