[tool.poetry]
name = "frontend-k8s-streamlit"
version = "0.1.0"
description = ""
authors = ["Abderrahim Guennoune <aguennoune@outlook.com>"]
readme = "README.md"
packages = [{include = "frontend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
